package com.harmellaw;

public class CriminalCase {
}
