package com.harmellaw;

public class PNCId {

    public final String value;

    public PNCId(String value) {
        this.value = value;
    }
}
