package com.harmellaw;

public class Suspect {

    private final CriminalOffence offence;

    public Suspect(CriminalOffence offence) {
        this.offence = offence;
    }
    
}
